--- a/aboutMe.html
+++ b/aboutMe.html
@@ -32,7 +32,7 @@
           officiis debitis aut rerum necessitatibus saepe eveniet ut et
           voluptates repudiandae sint et molestiae non recusandae. Itaque earum
           rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus
-          maiores alias consequatur aut perferendis doloribus asperiores ipsum
+          maiores alia consequatur aut perferendis doloribus asperiores ipsum
           delis forum birol parela maxime infena. Excepteur sint occaecat
           cupidatat non.
         </p>
