--- a/index.html
+++ b/index.html
@@ -2,57 +2,66 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HTML CSS - Alura</title>
+    <title>Portifolio</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
+
   <body>
     <header class="cabecalho">
-      <nav class="cabecalho__navegacao">
-        <a class="cabecalho__navegacao__link" href="index.html">Home</a>
-        <a class="cabecalho__navegacao__link" href="aboutMe.html">Sobre mim</a>
+      <nav class="cabecalho__menu">
+        <a class="cabecalho__menu__link" href="index.html">Home</a>
+        <a class="cabecalho__menu__link" href="aboutMe.html">Sobre mim</a>
       </nav>
     </header>
-    <main class="container">
-      <section class="container__conteudo">
-        <h1 class="container__conteudo__titulo">
-          Eleve seu negócio digital a outro nível
-          <strong class="titulo-figma">com um Front-end de qualidade!</strong>
+    <main class="apresentacao">
+      <section class="apresentacao__conteudo">
+        <h1 class="apresentacao__conteudo__titulo">
+          Eleve seu negócio digital a outro nível<strong
+            class="titulo-destaque"
+          >
+            com um Front-end de qualidade!
+          </strong>
         </h1>
-        <p class="container__conteudo__texto">
+        <p class="apresentacao__conteudo__texto">
           Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em
           React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em
           prática boas ideias. Vamos conversar?
         </p>
         <div class="apresentacao__links">
-          <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
+          <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
           <a
-            class="apresentacao__links__link"
+            class="apresentacao__links__navegacao"
             href="https://github.com/gustavo-meroni"
           >
             <img src="./assets/github.png" />
             Github
           </a>
           <a
-            class="apresentacao__links__link"
+            class="apresentacao__links__navegacao"
             href="https://www.linkedin.com/in/gustavo-meroni-6593a126a/"
           >
             <img src="./assets/linkedin.png" />
             Linkedin
           </a>
           <a
-            class="apresentacao__links__link"
-            href="https://instagram.com/guga_meroni"
+            class="apresentacao__links__navegacao"
+            href="https://instagram.com/guga_meroni/"
           >
             <img src="./assets/instagram.png" />
             Instagram
           </a>
         </div>
       </section>
-      <img src="./assets/imagem.png" alt="Joana programando" />
+      <img
+        class="apresentacao__imagem"
+        src="./assets/imagem.png"
+        alt="Foto da Joana Santos programando"
+      />
     </main>
     <footer class="rodape">
-      <p>Desenvolvido pelo Gustavo</p>
+      <p>Desenvolvido por Gustavo</p>
     </footer>
   </body>
 </html>
