--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   </head>
   <body>
     <header class="cabecalho">
-      <nav class="cabecalho__navegacao">
-        <a class="cabecalho__navegacao__link" href="index.html">Home</a>
-        <a class="cabecalho__navegacao__link" href="aboutMe.html">Sobre mim</a>
+      <nav class="cabecalho__menu">
+        <a class="cabecalho__menu__link" href="index.html">Home</a>
+        <a class="cabecalho__menu__link" href="aboutMe.html">Sobre mim</a>
       </nav>
     </header>
-    <main class="container">
-      <section class="container__conteudo">
-        <h1 class="container__conteudo__titulo">
+    <main class="apresentacao">
+      <section class="apresentacao__conteudo">
+        <h1 class="apresentacao__conteudo__titulo">
           Eleve seu negócio digital a outro nível
-          <strong class="titulo-figma">com um Front-end de qualidade!</strong>
+          <strong class="titulo-destaque"
+            >com um Front-end de qualidade!</strong
+          >
         </h1>
-        <p class="container__conteudo__texto">
+        <p class="apresentacao__conteudo__texto">
           Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em
           React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em
           prática boas ideias. Vamos conversar?
@@ -27,21 +29,21 @@
         <div class="apresentacao__links">
           <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
           <a
-            class="apresentacao__links__link"
+            class="apresentacao__links__navegacao"
             href="https://github.com/gustavo-meroni"
           >
             <img src="./assets/github.png" />
             Github
           </a>
           <a
-            class="apresentacao__links__link"
+            class="apresentacao__links__navegacao"
             href="https://www.linkedin.com/in/gustavo-meroni-6593a126a/"
           >
             <img src="./assets/linkedin.png" />
             Linkedin
           </a>
           <a
-            class="apresentacao__links__link"
+            class="apresentacao__links__navegacao"
             href="https://instagram.com/guga_meroni"
           >
             <img src="./assets/instagram.png" />
